ingress/grafana-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-external
  namespace: default
spec:
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: grafana-external
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.50.212
    ports:
      - port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.homelab.local`)
      kind: Rule
      services:
        - name: grafana-external
          port: 3000
  tls:
    secretName: homelab-tls
