ingress/influxdb-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-external
  namespace: default
spec:
  ports:
    - port: 8086
      targetPort: 8086
---
apiVersion: v1
kind: Endpoints
metadata:
  name: influxdb-external
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.50.212
    ports:
      - port: 8086
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`influxdb.homelab.local`)
      kind: Rule
      services:
        - name: influxdb-external
          port: 8086
  tls:
    secretName: homelab-tls
