ingress/prometheus-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-external
  namespace: default
spec:
  ports:
    - port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Endpoints
metadata:
  name: prometheus-external
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.50.212
    ports:
      - port: 9090
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.homelab.local`)
      kind: Rule
      services:
        - name: prometheus-external
          port: 9090
  tls:
    secretName: homelab-tls
