ingress/thanos-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-external
  namespace: default
spec:
  ports:
    - port: 19193
      targetPort: 19193
---
apiVersion: v1
kind: Endpoints
metadata:
  name: thanos-external
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.50.212
    ports:
      - port: 19193
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thanos
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`thanos.homelab.local`)
      kind: Rule
      services:
        - name: thanos-external
          port: 19193
  tls:
    secretName: homelab-tls
