ingress/uptime-kuma-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-external
  namespace: default
spec:
  ports:
    - port: 3001
      targetPort: 3001
---
apiVersion: v1
kind: Endpoints
metadata:
  name: uptime-kuma-external
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.50.212
    ports:
      - port: 3001
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime.homelab.local`)
      kind: Rule
      services:
        - name: uptime-kuma-external
          port: 3001
  tls:
    secretName: ""
